<resources>
    <string name="app_name" translatable="false">WaterWatcherz</string>
    <string name="welcome" translatable="false">Welcome!</string>
    <string name="efficiency" translatable="false">Efficiency Level</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="calendar" translatable="false">Add Task</string>
    <string name="group" translatable="false">Group</string>
    <string name="weekly_log" translatable="false">Add Task</string>
    <string name="week" translatable="false">Week:</string>
    <string name="task" translatable="false">Task:</string>
    <string name="month" translatable="false">Month:</string>
    <string name="duration" translatable="false">Duration:</string>
    <string name="checklist" translatable="false">Checklist/Log</string>
    <string name="house_information" translatable="false">House Information</string>
    <string name="town" translatable="false">Town:</string>
    <string name="confirm" translatable="false">Confirm</string>
    <string name="numOfPpl" translatable="false">Household Size:</string>
    <string-array name="tasks_array">
        <item>Bath</item>
        <item>Brushing Teeth</item>
        <item>Filling Pool</item>
        <item>Laundry</item>
        <item>Shower</item>
        <item>Washing Dishes</item>
        <item>Watering Lawn</item>
    </string-array>
    <string-array name="towns_array">
        <item>Worcester</item>
        <item>Leominster</item>
        <item>Auburn</item>
        <item>Shrewsbury</item>
        <item>Westborough</item>
        <item>Fitchburg</item>
        <item>West Brookfield</item>
        <item>Leicester</item>
        <item>Sturbridge</item>
        <item>Holden</item>
        <item>Northborough</item>
        <item>Gardner</item>
        <item>Dudley</item>
        <item>Webster</item>
        <item>Millbury</item>
        <item>Milford</item>
        <item>Northbridge</item>
        <item>Rutland</item>
        <item>Southbridge</item>
        <item>Athol</item>
        <item>Charlton</item>
        <item>Sutton</item>
        <item>Grafton</item>
        <item>Oxford</item>
        <item>Clinton</item>
        <item>Berlin</item>
        <item>Brookfield</item>
        <item>Spencer</item>
        <item>West Boylston</item>
        <item>Southborough</item>
        <item>Winchendon</item>
        <item>Hardwick</item>
        <item>Boylston</item>
        <item>Hopedale</item>
        <item>Ashburnham</item>
        <item>North Brookfield</item>
        <item>Bolton</item>
        <item>Hubbardston</item>
        <item>East Brookfield</item>
        <item>Braintree</item>
        <item>Phillipston</item>
        <item>Mendon</item>
        <item>Barre</item>
        <item>Blackstone</item>
        <item>Royalston</item>
        <item>Harvard</item>
        <item>Douglas</item>
        <item>Lunenburg</item>
        <item>Uxbridge</item>
        <item>Westminster</item>
        <item>Templeton</item>


        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        

    </string-array>
    <string-array name="paymentperiods_array">
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="bathORshower_array">
        <item>Bath</item>
        <item>Shower</item>
    </string-array>
    <string name="utilitybillinfo" translatable="false">Utility Bill</string>
    <string name="waterused" translatable="false">Total Water Used:</string>
    <string name="goal_met" translatable="false">Did You Meet Your Goal?</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
</resources>