<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.water.waterwatcherz.MainActivity">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="149dp"
        android:layout_height="118dp"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="168dp" />

    <TextView
        android:id="@+id/efficiencylevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/efficiency"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="299dp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="137dp" />

    <TabHost
        android:layout_width="276dp"
        android:layout_height="335dp"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="455dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/profile"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/calendar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:text="@string/calendar">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/group"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/checklist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/checklist"
                    android:orientation="vertical">

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</android.support.constraint.ConstraintLayout>
